--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> WEB1 - HTML </title>
+    <title> WEB1 - HTML : 용승갑  </title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -11,7 +11,7 @@
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>HTML</h2>
+    <h2>HTML : 용승갑</h2>
     <p><a href="https://www.w3.org" target="_blank" title="html 5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as <strong> Cascading <u>Style</u> Sheets </strong>(CSS) and scripting languages such as JavaScript.
     <img src="coding.jpg" width="100%">
     </p><p style="margin-top:45px;">Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as  Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
