--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> WEB1 - CSS </title>
+    <title> WEB1 - CSS : 용승갑  </title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -11,7 +11,7 @@
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>CSS</h2>
+    <h2>CSS : 용승갑</h2>
     <p>웹 문서의 전반적인 스타일을 미리 저장해 둔 스타일시트이다. 문서 전체의 일관성을 유지할 수 있고, 세세한 스타일 지정의 필요를 줄어들게 하였다.
     기존의 HTML은 웹 문서를 다양하게 설계하고 수시로 변경하는데 많은 제약이 따르는데, 이를 보완하기 위해 만들어진 것이 스타일 시트이고 스타일 시트의 표준안이 바로 CSS이다. 간단히 스타일 시트라고도 한다.
 
