--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> WEB1 - Welcome </title>
+    <title> WEB1 - Welcome : 용승갑 </title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -11,7 +11,7 @@
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>WEB</h2>
+    <h2>WEB : 용승갑 </h2>
     <p>
       [웹] 우리가 흔히 사용하는 “인터넷에서 확인해 볼께요”라는 말의 뜻은 “인터넷 익스플로러나 크롬 등의 웹 브라우저를 통해 웹 사이트에 접속하여 내용을 확인해 볼께요”의 뜻입니다. 즉, 인터넷과 웹을 비슷한 의미로 섞어서 사용하고 있는 것이지요. 하지만, 실은 인터넷과 웹은...
     </p>
