--- a/1.html
+++ b/1.html
@@ -3,17 +3,22 @@
   <head>
     <title> WEB1 - HTML : 용승갑  </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>HTML : 용승갑</h2>
-    <p><a href="https://www.w3.org" target="_blank" title="html 5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as <strong> Cascading <u>Style</u> Sheets </strong>(CSS) and scripting languages such as JavaScript.
-    <img src="coding.jpg" width="100%">
-    </p><p style="margin-top:45px;">Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as  Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>HTML : 용승갑</h2>
+        <p><a href="https://www.w3.org" target="_blank" title="html 5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as <strong> Cascading <u>Style</u> Sheets </strong>(CSS) and scripting languages such as JavaScript.
+        <img src="coding.jpg" width="100%">
+        </p><p style="margin-top:45px;">Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as  Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
+      </div>
+    </div>
   </body>
 </html>
