--- a/2.html
+++ b/2.html
@@ -3,51 +3,14 @@
   <head>
     <title> WEB1 - CSS : 용승갑  </title>
     <meta charset="utf-8">
-    <style>
-      body {
-        margin: 0;
-      }
-      #active {
-        color: red;
-      }
-      .saw {
-        color: gray;
-      }
-      a {
-        color: black;
-        text-decoration: none;
-      }
-      h1 {
-          font-size: 45px;
-          text-align: center;
-          border-bottom: 1px solid gray;
-          margin:0;
-          padding: 20px;
-      }
-      ol {
-        border-right: 1px solid gray;
-        width: 100px;
-        margin: 0;
-        padding: 20px;
-      }
-      #grid {
-        display: grid;
-        grid-template-columns: 150px 1fr;
-      }
-      ol {
-        padding-left: 33px;
-      }
-      #article {
-        padding-left: 25px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
     <div id="grid">
       <ol>
-        <li><a href="1.html" class="saw">HTML</a></li>
-        <li><a href="2.html" class="saw" id="active">CSS</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
       </ol>
       <div id="article">
