--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
   <head>
     <title> WEB1 - Welcome : 용승갑 </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>WEB : 용승갑 </h2>
-    <p>
-      [웹] 우리가 흔히 사용하는 “인터넷에서 확인해 볼께요”라는 말의 뜻은 “인터넷 익스플로러나 크롬 등의 웹 브라우저를 통해 웹 사이트에 접속하여 내용을 확인해 볼께요”의 뜻입니다. 즉, 인터넷과 웹을 비슷한 의미로 섞어서 사용하고 있는 것이지요. 하지만, 실은 인터넷과 웹은...
-    </p>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>WEB : 용승갑 </h2>
+        <p>
+          [웹] 우리가 흔히 사용하는 “인터넷에서 확인해 볼께요”라는 말의 뜻은 “인터넷 익스플로러나 크롬 등의 웹 브라우저를 통해 웹 사이트에 접속하여 내용을 확인해 볼께요”의 뜻입니다. 즉, 인터넷과 웹을 비슷한 의미로 섞어서 사용하고 있는 것이지요. 하지만, 실은 인터넷과 웹은...
+        </p>
+      </div>
+    </div>
   </body>
 </html>
